fix the height on mobile version

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins';
     background-color: white;
     text-align: center;
     display: flex;
